# panelwork-rs

./: .gitmodules  Cargo.toml
.cargo/: config.toml
slang-builder/: Cargo.toml  build.rs
slang-builder-runtime/: Cargo.toml
slang-builder-runtime/src/: lib.rs
thermal/: Cargo.toml
thermal-playground/: Cargo.toml  build.rs
thermal/shaders/src/: vertex.slang
thermal/src/: defaults.rs  lib.rs  primitives.rs  rwh_util.rs  sdl3_util.rs  util.rs
thermal/src/core/: atlas.rs  command.rs  draw_handle.rs  mod.rs  presenter.rs  vertex_buffer.rs
thermal/src/ext/: handle.rs  mod.rs  physical_device.rs  result.rs  sdl3_physical_device.rs
thermal/src/mesh/: mod.rs  rect.rs
thermal/src/primitives/: mod.rs  vk.rs
thermal/src/shaders/: mod.rs
thermal/src/shaders/src/: solid.slang  texture.slang  vertex.sb  vertex.slang
thermal/src/slang/: mod.rs
thermal/src/slang/src/: texture.slang  vertex.slang
thermal/src/thrwh/: mod.rs  surface.rs
thermal/src/thvk/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_buffer.rs  device_image.rs  device_memory.rs  fence.rs  framebuffer.rs  handle.rs  image.rs  image_view.rs  instance.rs  library.rs  memory_mapping.rs  mod.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  queue.rs  render_pass.rs  rwh_surface.rs  rwh_surface_factory.rs  sampler.rs  sdl3_surface.rs  semaphore.rs  shader_module.rs  swapchain.rs
thermal/thermal-derive/: Cargo.toml
thermal/thermal-derive/src/: device_handle.rs  handle.rs  lib.rs  util.rs
(+4 files in other folders)
